--- a/styles.css
+++ b/styles.css
@@ -587,7 +587,7 @@ img {
         width: calc((100vw - min(var(--container-max), 100vw)) / 2);
         height: 100vh;
 
-        background-image: url('img/background.png');
+        background-image: url('https://i.imgur.com/mqtV2j4.png');
         background-repeat: no-repeat;
         background-position: 12px center;
         /* keep that margin */
@@ -768,4 +768,5 @@ img {
 
 .modal-close:hover {
     color: #bbb;
+
 }
